Module 5 - Conditional Locale Code and Currencies

--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -34,7 +34,7 @@
         </div>
         <div class="row">
           <p i18n="label|shipping label@@cartShippingLabel">Shipping</p>
-          <p>{{cart.shipping | currency:'USD'}}</p>
+          <p>{{cart.shipping | currency}}</p>
         </div>
         <div class="row">
           <p i18n="label|sales tax label@@cartSalesTaxLabel">Sales Tax</p>
